more tournament logic and some backend db stuff
